# tui-agent

./: README.md  hello.py  index.html  main.py  pyproject.toml  script.js  style.css
.ai-agent/: config.toml
agent/: agent.py  events.py  peristence.py  session.py
client/: llm_client.py  response.py
config/: config.py  loader.py
context/: compaction.py  loop_detector.py  manager.py
hooks/: hooks_system.py
prompts/: system.py
safety/: approval.py
scripts/: test_tool.py
tools/: base.py  discovery.py  registry.py  subagents.py
tools/builtin/: __init__.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
tools/mcp/: client.py  mcp_manager.py  mcp_tool.py
ui/: tui.py
utils/: path.py  text.py
