[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "openai>=2.32.0",
    "platformdirs>=4.9.6",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
    "tiktoken>=0.12.0",
    "tomli>=2.4.1",
]
